--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1113,9 +1113,6 @@ select {
 .mb-1 {
   margin-bottom: 0.25rem;
 }
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -1145,9 +1142,6 @@ select {
 }
 .ml-auto {
   margin-left: auto;
-}
-.mr-1 {
-  margin-right: 0.25rem;
 }
 .mr-2 {
   margin-right: 0.5rem;
@@ -1214,6 +1208,9 @@ select {
 }
 .h-4 {
   height: 1rem;
+}
+.h-48 {
+  height: 12rem;
 }
 .h-5 {
   height: 1.25rem;
@@ -1475,9 +1472,6 @@ select {
 .border-r {
   border-right-width: 1px;
 }
-.border-r-2 {
-  border-right-width: 2px;
-}
 .border-t {
   border-top-width: 1px;
 }
@@ -1503,9 +1497,6 @@ select {
 }
 .border-transparent {
   border-color: transparent;
-}
-.border-opacity-60 {
-  --tw-border-opacity: 0.6;
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -1683,9 +1674,6 @@ select {
 .pr-10 {
   padding-right: 2.5rem;
 }
-.pr-3 {
-  padding-right: 0.75rem;
-}
 .pr-4 {
   padding-right: 1rem;
 }
@@ -1773,9 +1761,6 @@ select {
 }
 .leading-8 {
   line-height: 2rem;
-}
-.leading-none {
-  line-height: 1;
 }
 .leading-relaxed {
   line-height: 1.625;
@@ -2392,14 +2377,6 @@ select {
     grid-column: span 2 / span 2;
   }
 
-  .md\:mb-2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .md\:ml-0 {
-    margin-left: 0px;
-  }
-
   .md\:ml-auto {
     margin-left: auto;
   }
@@ -2412,16 +2389,8 @@ select {
     display: grid;
   }
 
-  .md\:h-36 {
-    height: 9rem;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
   }
 
   .md\:grid-cols-2 {
@@ -2455,20 +2424,8 @@ select {
     grid-column: span 4 / span 4;
   }
 
-  .lg\:mb-0 {
-    margin-bottom: 0px;
-  }
-
-  .lg\:ml-auto {
-    margin-left: auto;
-  }
-
   .lg\:mt-0 {
     margin-top: 0px;
-  }
-
-  .lg\:h-48 {
-    height: 12rem;
   }
 
   .lg\:h-auto {
@@ -2481,6 +2438,10 @@ select {
 
   .lg\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
   }
 
   .lg\:w-2\/3 {
