--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1120,6 +1120,9 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
+.mb-0 {
+  margin-bottom: 0px;
+}
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -1131,6 +1134,9 @@ select {
 }
 .mb-16 {
   margin-bottom: 4rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .mb-20 {
   margin-bottom: 5rem;
@@ -1150,8 +1156,14 @@ select {
 .mb-8 {
   margin-bottom: 2rem;
 }
+.ml-0 {
+  margin-left: 0px;
+}
 .ml-1 {
   margin-left: 0.25rem;
+}
+.ml-10 {
+  margin-left: 2.5rem;
 }
 .ml-12 {
   margin-left: 3rem;
@@ -1185,6 +1197,9 @@ select {
 }
 .mt-10 {
   margin-top: 2.5rem;
+}
+.mt-16 {
+  margin-top: 4rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -1547,6 +1562,9 @@ select {
 .border-transparent {
   border-color: transparent;
 }
+.border-opacity-60 {
+  --tw-border-opacity: 0.6;
+}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1575,13 +1593,13 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-indigo-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 231 255 / var(--tw-bg-opacity));
-}
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+.bg-indigo-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(224 231 255 / var(--tw-bg-opacity));
 }
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
@@ -1749,6 +1767,9 @@ select {
 .pl-3 {
   padding-left: 0.75rem;
 }
+.pr-0 {
+  padding-right: 0px;
+}
 .pr-10 {
   padding-right: 2.5rem;
 }
@@ -1815,6 +1836,9 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.font-bold {
+  font-weight: 700;
 }
 .font-medium {
   font-weight: 500;
@@ -2268,10 +2292,6 @@ select {
     margin-bottom: 0px;
   }
 
-  .sm\:ml-0 {
-    margin-left: 0px;
-  }
-  
   .sm\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -2314,10 +2334,6 @@ select {
 
   .sm\:h-10 {
     height: 2.5rem;
-  }
-
-  .sm\:h-20 {
-    height: 5rem;
   }
 
   .sm\:w-1\/3 {
@@ -2429,20 +2445,21 @@ select {
     border-top-right-radius: 0.375rem;
   }
 
+  .sm\:border-l {
+    border-left-width: 1px;
+  }
+
   .sm\:border-l-2 {
     border-left-width: 2px;
+  }
+
+  .sm\:border-t-0 {
+    border-top-width: 0px;
   }
 
   .sm\:border-gray-200 {
     --tw-border-opacity: 1;
     border-color: rgb(229 231 235 / var(--tw-border-opacity));
-  }
-  .sm\:border-l {
-    border-left-width: 1px;
-  }
-
-  .sm\:border-t-0 {
-    border-top-width: 0px;
   }
 
   .sm\:p-6 {
@@ -2468,6 +2485,7 @@ select {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
+
   .sm\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -2480,6 +2498,7 @@ select {
   .sm\:pl-4 {
     padding-left: 1rem;
   }
+
   .sm\:pl-8 {
     padding-left: 2rem;
   }
@@ -2504,6 +2523,11 @@ select {
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 @media (min-width: 768px) {
@@ -2548,6 +2572,10 @@ select {
     width: 66.666667%;
   }
 
+  .md\:w-full {
+    width: 100%;
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2585,8 +2613,8 @@ select {
     padding-bottom: 2rem;
   }
 
-  .md\:pl-16 {
-    padding-left: 4rem;
+  .md\:pl-6 {
+    padding-left: 1.5rem;
   }
 
   .md\:pr-16 {
@@ -2639,6 +2667,10 @@ select {
     width: 80%;
   }
 
+  .lg\:w-4\/6 {
+    width: 66.666667%;
+  }
+
   .lg\:w-full {
     width: 100%;
   }
@@ -2649,9 +2681,6 @@ select {
 
   .lg\:flex-grow {
     flex-grow: 1;
-  }
-  .lg\:w-4\/6 {
-    width: 66.666667%;
   }
 
   .lg\:items-start {
@@ -2676,8 +2705,8 @@ select {
     padding-left: 3rem;
   }
 
-  .lg\:pl-24 {
-    padding-left: 6rem;
+  .lg\:pl-2 {
+    padding-left: 0.5rem;
   }
 
   .lg\:pr-24 {
@@ -2686,6 +2715,12 @@ select {
 
   .lg\:text-left {
     text-align: left;
+  }
+}
+@media (min-width: 1280px) {
+
+  .xl\:w-1\/4 {
+    width: 25%;
   }
 }
 
