--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1177,9 +1177,6 @@ select {
 .mr-3 {
   margin-right: 0.75rem;
 }
-.mr-5 {
-  margin-right: 1.25rem;
-}
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -1227,9 +1224,6 @@ select {
 }
 .h-1 {
   height: 0.25rem;
-}
-.h-1\/2 {
-  height: 50%;
 }
 .h-10 {
   height: 2.5rem;
@@ -1575,10 +1569,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
-.bg-indigo-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 231 255 / var(--tw-bg-opacity));
-}
 .bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
@@ -1594,6 +1584,14 @@ select {
 .bg-indigo-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+.bg-lime-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(132 204 22 / var(--tw-bg-opacity));
+}
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 .bg-red-100 {
   --tw-bg-opacity: 1;
@@ -1815,6 +1813,9 @@ select {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.font-bold {
+  font-weight: 700;
 }
 .font-medium {
   font-weight: 500;
@@ -2040,10 +2041,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
-.hover\:bg-gray-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -2063,6 +2060,10 @@ select {
 .hover\:bg-indigo-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity));
+}
+.hover\:bg-orange-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 88 12 / var(--tw-bg-opacity));
 }
 .hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
@@ -2268,10 +2269,6 @@ select {
     margin-bottom: 0px;
   }
 
-  .sm\:ml-0 {
-    margin-left: 0px;
-  }
-  
   .sm\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -2314,10 +2311,6 @@ select {
 
   .sm\:h-10 {
     height: 2.5rem;
-  }
-
-  .sm\:h-20 {
-    height: 5rem;
   }
 
   .sm\:w-1\/3 {
@@ -2429,20 +2422,21 @@ select {
     border-top-right-radius: 0.375rem;
   }
 
+  .sm\:border-l {
+    border-left-width: 1px;
+  }
+
   .sm\:border-l-2 {
     border-left-width: 2px;
+  }
+
+  .sm\:border-t-0 {
+    border-top-width: 0px;
   }
 
   .sm\:border-gray-200 {
     --tw-border-opacity: 1;
     border-color: rgb(229 231 235 / var(--tw-border-opacity));
-  }
-  .sm\:border-l {
-    border-left-width: 1px;
-  }
-
-  .sm\:border-t-0 {
-    border-top-width: 0px;
   }
 
   .sm\:p-6 {
@@ -2468,6 +2462,7 @@ select {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
   }
+
   .sm\:py-8 {
     padding-top: 2rem;
     padding-bottom: 2rem;
@@ -2480,6 +2475,7 @@ select {
   .sm\:pl-4 {
     padding-left: 1rem;
   }
+
   .sm\:pl-8 {
     padding-left: 2rem;
   }
@@ -2522,10 +2518,6 @@ select {
 
   .md\:ml-auto {
     margin-left: auto;
-  }
-
-  .md\:mr-auto {
-    margin-right: auto;
   }
 
   .md\:mt-0 {
@@ -2585,8 +2577,8 @@ select {
     padding-bottom: 2rem;
   }
 
-  .md\:pl-16 {
-    padding-left: 4rem;
+  .md\:pl-6 {
+    padding-left: 1.5rem;
   }
 
   .md\:pr-16 {
@@ -2639,6 +2631,10 @@ select {
     width: 80%;
   }
 
+  .lg\:w-4\/6 {
+    width: 66.666667%;
+  }
+
   .lg\:w-full {
     width: 100%;
   }
@@ -2649,9 +2645,6 @@ select {
 
   .lg\:flex-grow {
     flex-grow: 1;
-  }
-  .lg\:w-4\/6 {
-    width: 66.666667%;
   }
 
   .lg\:items-start {
@@ -2676,8 +2669,8 @@ select {
     padding-left: 3rem;
   }
 
-  .lg\:pl-24 {
-    padding-left: 6rem;
+  .lg\:pl-2 {
+    padding-left: 0.5rem;
   }
 
   .lg\:pr-24 {
